--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 /*common*/
 html {
-    font: 400 18px/24px Roboto, Meiryo, Helvetica, Arial, sans-serif;
+    font: 400 18px/24px Roboto, Helvetica, Arial, sans-serif;
     height: 100%;
     color: #333;
     background: #fff;
