--- a/css/normalize.css
+++ b/css/normalize.css
@@ -27,19 +27,6 @@ body {
 }
 
 /**
- * Add the correct display in IE 9-.
- */
-
-article,
-aside,
-footer,
-header,
-nav,
-section {
-    display: block;
-}
-
-/**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
@@ -53,22 +40,11 @@ h1 {
    ========================================================================== */
 
 /**
- * Add the correct display in IE 9-.
  * 1. Add the correct display in IE.
  */
 
-figcaption,
-figure,
 main { /* 1 */
     display: block;
-}
-
-/**
- * Add the correct margin in IE 8.
- */
-
-figure {
-    margin: 1em 40px;
 }
 
 /**
@@ -96,12 +72,10 @@ pre {
    ========================================================================== */
 
 /**
- * 1. Remove the gray background on active links in IE 10.
  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 
 a {
-    background-color: transparent; /* 1 */
     -webkit-text-decoration-skip: objects; /* 2 */
 }
 
@@ -114,15 +88,6 @@ abbr[title] {
     border-bottom: none; /* 1 */
     text-decoration: underline; /* 2 */
     text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-
-b,
-strong {
-    font-weight: inherit;
 }
 
 /**
@@ -152,15 +117,6 @@ samp {
 
 dfn {
     font-style: italic;
-}
-
-/**
- * Add the correct background and color in IE 9-.
- */
-
-mark {
-    background-color: #ff0;
-    color: #000;
 }
 
 /**
@@ -196,29 +152,12 @@ sup {
    ========================================================================== */
 
 /**
- * Add the correct display in IE 9-.
- */
-
-audio,
-video {
-    display: inline-block;
-}
-
-/**
  * Add the correct display in iOS 4-7.
  */
 
 audio:not([controls]) {
     display: none;
     height: 0;
-}
-
-/**
- * Remove the border on images inside links in IE 10-.
- */
-
-img {
-    border-style: none;
 }
 
 /**
@@ -329,12 +268,10 @@ legend {
 }
 
 /**
- * 1. Add the correct display in IE 9-.
  * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
 progress {
-    display: inline-block; /* 1 */
     vertical-align: baseline; /* 2 */
 }
 
@@ -344,17 +281,6 @@ progress {
 
 textarea {
     overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
-
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
 }
 
 /**
@@ -399,12 +325,10 @@ textarea {
    ========================================================================== */
 
 /*
- * Add the correct display in IE 9-.
  * 1. Add the correct display in Edge, IE, and Firefox.
  */
 
-details, /* 1 */
-menu {
+details { /* 1 */
     display: block;
 }
 
@@ -420,28 +344,9 @@ summary {
    ========================================================================== */
 
 /**
- * Add the correct display in IE 9-.
- */
-
-canvas {
-    display: inline-block;
-}
-
-/**
  * Add the correct display in IE.
  */
 
 template {
-    display: none;
-}
-
-/* Hidden
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10-.
- */
-
-[hidden] {
     display: none;
 }
