--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ a:hover,
 .shitsumon.k68 { background-image: url(../img/kanas.svg#k68); }
 .shitsumon.k69 { background-image: url(../img/kanas.svg#k69); }
 .shitsumon.k70 { background-image: url(../img/kanas.svg#k70); }
+.shitsumon.k71 { background-image: url(../img/kanas.svg#k71); }
 
 /* animation */
 .shitsumon::after {
